Additional fixes for Kindle Tablets

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -182,6 +182,7 @@ dependencies {
     exclude group: 'com.android.support'
   }
 
+  implementation 'com.google.android.material:material:1.1.0-beta02'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
   implementation "com.github.moxy-community:moxy:$moxyVersion"
