--- a/serenity-app/proguard.cfg
+++ b/serenity-app/proguard.cfg
@@ -15,6 +15,7 @@
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
 -keep public class android.support.v4.media
+-keep class us.nineworlds.serenity.**
 
 -keepclasseswithmembernames class * {
     native <methods>;
