Update exception format info for travis ci

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -128,6 +128,10 @@ android {
       maxParallelForks = 2
 
       jvmArgs '-noverify'
+
+      testLogging {
+        exceptionFormat "full"
+      }
     }
   }
 
