--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -14,6 +14,7 @@ buildscript {
   }
 }
 
+evaluationDependsOn(":emby-lib")
 evaluationDependsOn(':plexapp-rest-library')
 evaluationDependsOn(':subtitle-converter')
 
