--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -64,6 +64,8 @@ android {
     multiDexEnabled true
     multiDexKeepProguard file("multidex_keep_file.txt")
 
+    vectorDrawables.useSupportLibrary = true
+
   }
 
   aaptOptions {
@@ -179,7 +181,7 @@ dependencies {
     exclude group: 'com.android.support'
   }
 
-  implementation 'com.google.android.material:material:1.1.0-beta02'
+  implementation 'com.google.android.material:material:1.1.0-rc01'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
   implementation "com.github.moxy-community:moxy:$moxyVersion"
