--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
   }
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-allopen:1.3.50"
+    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
     classpath "org.jacoco:org.jacoco.core:0.8.3"
   }
 }
