--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 }
 
 project.ext {
+  appversion = "2.1.0"
   okhttpVersion = "3.13.1"
   kotlinVersion = "1.3.61"
   androidPriorityJobQueueVersion = "2.0.1"
