--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     classpath 'com.google.gms:google-services:4.2.0'
     classpath 'io.fabric.tools:gradle:1.27.0'
     classpath "com.android.tools.build:gradle:$androidPluginVersion"
-    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.+"
+    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
   }
