--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -206,6 +206,8 @@ dependencies {
   implementation "com.jakewharton.timber:timber:$timberVersion"
   implementation "androidx.cardview:cardview:1.0.0"
   implementation "androidx.annotation:annotation:1.1.0"
+  implementation 'com.hannesdorfmann:adapterdelegates4:4.2.0'
+  implementation 'com.hannesdorfmann:adapterdelegates4-pagination:4.2.0'
 
   releaseImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion") {
     exclude group: 'javax.inject'
@@ -223,10 +225,8 @@ dependencies {
   implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
   implementation "net.danlew:android.joda:$jodaTimeVersion"
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-  //TODO Upgrade to Android X and update to 1.1.0
   implementation 'com.google.android:flexbox:1.1.0'
   implementation 'com.henryblue.library:tvrecyclerview:1.2.2'
-  //TODO Upgrade to Android X and update to 3.0.0
   implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
 
   implementation('com.github.rstanic12:Resourceful:1.0.0') {
