--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 
   ext {
     kotlinVersion = "1.3.61"
-    androidPluginVersion = "3.5.3"
+    androidPluginVersion = "3.6.3"
   }
 
   repositories {
@@ -16,7 +16,7 @@ buildscript {
   }
   dependencies {
     classpath 'com.google.gms:google-services:4.2.0'
-    classpath 'io.fabric.tools:gradle:1.27.0'
+    classpath 'io.fabric.tools:gradle:1.28.0'
     classpath "com.android.tools.build:gradle:$androidPluginVersion"
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
@@ -28,6 +28,9 @@ repositories {
   jcenter()
   mavenCentral()
   google()
+  maven {
+    url "https://oss.sonatype.org/content/repositories/snapshots"
+  }
 }
 
 dependencies {
@@ -67,7 +70,7 @@ project.ext {
   assertkVersion = "0.20"
   assertjVersion = "3.11.1"
   mockitoVersion = "3.2.4"
-  robolectricVersion = "4.3"
+  robolectricVersion = "4.4-SNAPSHOT"
   openglApiVersion = "gl1.1-android-2.1_r1"
   xmlUnitVersion = "1.3"
   assertJAndroidVersion = "1.1.1"
