--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -16,6 +16,9 @@ repositories {
   google()
   jcenter()
   mavenCentral()
+  maven {
+    url "https://oss.sonatype.org/content/repositories/snapshots"
+  }
 }
 
 apply plugin: 'com.android.library'
