Upgrade to robolectric 4.4-alpha-3

--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -55,6 +55,7 @@ sourceSets {
 dependencies {
 
   api project(':serenity-common')
+//  api 'org.simpleframework:simple-xml:jar:2.7.1'
   api "com.squareup.retrofit2:retrofit:$retrofitVersion"
   api "com.squareup.okhttp3:okhttp:$okhttpVersion"
   api "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
