--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,12 @@ buildscript {
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+    classpath "gradle.plugin.com.greensopinion.gradle-android-eclipse:gradle-android-eclipse:1.1"
   }
+}
+
+plugins {
+  id "com.diffplug.gradle.spotless" version "3.30.0"
 }
 
 repositories {
@@ -42,15 +47,54 @@ dependencies {
   project(":serenity-app")
 }
 
+
+subprojects {
+  apply plugin: "com.diffplug.gradle.spotless"
+  
+//  if (!it.name.startsWith('plexapp') && !it.name.startsWith('subtitle') && !it.name.startsWith('serenity-common')) {
+//    apply plugin: 'com.greensopinion.gradle-android-eclipse'
+//    apply plugin: 'eclipse'
+//    configurations {
+//      eclipseConfig.extendsFrom implementation
+//      eclipseTestConfig.extendsFrom testImplementation
+//    }
+
+//	eclipse {
+//	  classpath {
+//	    plusConfigurations += [
+//	        configurations.eclipseConfig,
+//	        configurations.eclipseTestConfig,
+//	    ]
+//	    downloadSources = true
+//	  }
+//	}  
+//  }
+
+  spotless {
+    format 'xml', {
+      target '**/layout*/*.xml'
+      indentWithSpaces(2)
+      eclipseWtp('xml').configFile rootProject.file('spotless.xml.prefs')
+    }
+  }
+
+ tasks.withType(Test) {
+
+   testLogging {
+     exceptionFormat = "full"
+   }
+  }
+}
+
 project.ext {
   appversion = "2.1.0"
-  okhttpVersion = "3.13.1"
+  okhttpVersion = "3.13.0"
   kotlinVersion = "1.3.61"
   androidPriorityJobQueueVersion = "2.0.1"
   daggerVersion = "1.2.5"
   eventBus = "3.1.1"
   moshiKotlinVersion = "1.6.0"
-  retrofitVersion = "2.4.0"
+  retrofitVersion = "2.9.0"
   jodaTimeVersion = "2.10.3"
   timberVersion = "4.7.1"
   exoplayerVersion = "2.11.1"
@@ -70,7 +114,7 @@ project.ext {
   assertkVersion = "0.20"
   assertjVersion = "3.11.1"
   mockitoVersion = "3.2.4"
-  robolectricVersion = "4.4-SNAPSHOT"
+  robolectricVersion = "4.4-alpha-4"
   openglApiVersion = "gl1.1-android-2.1_r1"
   xmlUnitVersion = "1.3"
   assertJAndroidVersion = "1.1.1"
