--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ android:
     - build-tools-28.0.3
     - android-27
     - android-28
+    - android-29
+    - android-30
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-support
