--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -62,7 +62,7 @@ android {
     versionName "2.1.0-M3"
 
     minSdkVersion 21
-    targetSdkVersion 28
+    targetSdkVersion 29
     multiDexEnabled true
     multiDexKeepProguard file("multidex_keep_file.txt")
 
@@ -145,18 +145,6 @@ android {
   }
 }
 
-//afterEvaluate {
-//  tasks.matching {
-//    it.name.startsWith('dex')
-//  }.each { dx ->
-//    if (dx.additionalParameters == null) {
-//      dx.additionalParameters = ['--multi-dex']
-//    } else {
-//      dx.additionalParameters += '--multi-dex'
-//    }
-//  }
-//}
-
 dependencies {
 
   implementation project(':plexapp-rest-library')
@@ -165,7 +153,7 @@ dependencies {
   implementation project(':serenity-android-common')
   implementation project(':serenity-common')
 
-  implementation 'com.google.firebase:firebase-core:17.2.1'
+  implementation 'com.google.firebase:firebase-core:17.4.4'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
   implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$glideOkHttpVersion"
@@ -184,7 +172,7 @@ dependencies {
     exclude group: 'com.android.support'
   }
 
-  implementation 'com.google.android.material:material:1.1.0-rc01'
+  implementation 'com.google.android.material:material:1.2.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
   implementation "com.github.moxy-community:moxy:$moxyVersion"
@@ -193,14 +181,13 @@ dependencies {
   kapt "com.github.bumptech.glide:compiler:$glideVersion"
   implementation "org.greenrobot:eventbus:$eventBus"
   implementation "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
-  implementation "androidx.appcompat:appcompat:1.1.0"
-  implementation "androidx.leanback:leanback:1.1.0-alpha03"
-  implementation "androidx.leanback:leanback-preference:1.1.0-alpha03"
+  implementation "androidx.appcompat:appcompat:1.2.0"
+  implementation "androidx.leanback:leanback:1.1.0-alpha04"
+  implementation "androidx.leanback:leanback-preference:1.1.0-alpha04"
   implementation "androidx.legacy:legacy-support-v4:1.0.0"
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation "androidx.percentlayout:percentlayout:1.0.0"
   implementation "com.googlecode.juniversalchardet:juniversalchardet:$universalCharDetVersion"
-  implementation "com.mcxiaoke.volley:library:$volleyVersion"
   implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
   implementation "me.jessyan:retrofit-url-manager:$urlManager"
   implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttpVersion"
