Issue #431 fix playback position retrieval and update from Emby

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -99,7 +99,7 @@ android {
   buildTypes {
     debug {
       minifyEnabled false
-      testCoverageEnabled true
+      testCoverageEnabled false
     }
     release {
       if (project.hasProperty("keystore")) {
