--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
-    classpath "org.jacoco:org.jacoco.core:0.8.3"
+    classpath "org.jacoco:org.jacoco.core:0.8.5"
   }
 }
 
@@ -153,7 +153,7 @@ dependencies {
   implementation project(':serenity-android-common')
   implementation project(':serenity-common')
 
-  implementation 'com.google.firebase:firebase-core:17.4.4'
+  implementation 'com.google.firebase:firebase-analytics:17.5.0'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
   implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$glideOkHttpVersion"
