--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,7 @@ project.ext {
   assertkVersion = "0.20"
   assertjVersion = "3.11.1"
   mockitoVersion = "3.2.4"
-  robolectricVersion = "4.4-alpha-4"
+  robolectricVersion = "4.4"
   openglApiVersion = "gl1.1-android-2.1_r1"
   xmlUnitVersion = "1.3"
   assertJAndroidVersion = "1.1.1"
