--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
    - pip install --user codecov
 
 script:
-   - travis_wait 60 ./gradlew clean jacocoTestReport sonarqube
+   - ./gradlew clean jacocoTestReport sonarqube
    
 after_success:
   - codecov
