--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -9,8 +9,8 @@ buildscript {
     }
   }
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
-    classpath "org.jacoco:org.jacoco.core:0.8.5"
+    classpath "org.jetbrains.kotlin:kotlin-allopen:1.5.21"
+    classpath "org.jacoco:org.jacoco.core:0.8.7"
   }
 }
 
@@ -153,6 +153,12 @@ dependencies {
   implementation project(':serenity-android-common')
   implementation project(':serenity-common')
 
+  implementation("androidx.recyclerview:recyclerview:1.2.1") {
+    version {
+      strictly "1.2.1"
+    }
+  }
+
   implementation 'com.google.firebase:firebase-analytics:17.5.0'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
@@ -182,8 +188,8 @@ dependencies {
   implementation "org.greenrobot:eventbus:$eventBus"
   implementation "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
   implementation "androidx.appcompat:appcompat:1.2.0"
-  implementation "androidx.leanback:leanback:1.1.0-alpha04"
-  implementation "androidx.leanback:leanback-preference:1.1.0-alpha04"
+  implementation "androidx.leanback:leanback:1.1.0-rc02"
+  implementation "androidx.leanback:leanback-preference:1.1.0-rc01"
   implementation "androidx.legacy:legacy-support-v4:1.0.0"
   implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
   implementation "androidx.percentlayout:percentlayout:1.0.0"
