--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,12 @@ cache:
  - node_modules
 
 before_install:
-  - "pip3 install codecov"
+#  - "pip3 install codecov"
 
 script:
    - travis_wait 60 ./gradlew clean jacocoTestReport sonarqube
    
 after_success:
-  - "codecov"
+#  - "codecov"
 
 sudo: false
