--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: android
 
-android:
-  components:
-    - tools # to get the new `repository-11.xml`
-    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
-    - build-tools-30.0.2
-    - platform-tools
-    - android-29
-    - android-30
-    - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-support
-    - extra-google-google_play_services
+#android:
+#  components:
+#    - tools # to get the new `repository-11.xml`
+#    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+#    - build-tools-30.0.2
+#    - platform-tools
+#    - android-29
+#    - android-30
+#    - extra-android-m2repository
+#    - extra-google-m2repository
+#    - extra-android-support
+#    - extra-google-google_play_services
+
 jdk:
    - openjdk11
 
@@ -32,6 +33,9 @@ cache:
 
 before_install:
 #  - "pip3 install codecov"
+
+before_install:
+- yes | sdkmanager "platforms;android-30;android-29;build-tools-30.0.2"
 
 script:
    - ./gradlew clean jacocoTestReport sonarqube
