Update circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 
       # The next step will run the unit tests
       - android/run-tests:
-          test-command: ./gradlew clean lint testDebugUnitTest --continue
+          test-command: ./gradlew clean jacocoTestReport
 
       # Then start the emulator and run the Instrumentation tests!
       #- android/start-emulator-and-run-tests:
@@ -27,10 +27,10 @@ jobs:
       #    system-image: system-images;android-25;google_apis;x86
 
       # And finally run the release build
-      - run:
-          name: Assemble release build
-          command: |
-            ./gradlew clean testDebugUnitTest    
+      #- run:
+      #    name: Assemble release build
+      #    command: |
+      #      ./gradlew clean testDebugUnitTest    
 
 workflows:
   # Below is the definition of your workflow.
