--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 orbs:
   android: circleci/android@1.0.3
+  codecov: circleci/codecov@0.0.5
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -30,7 +31,8 @@ jobs:
       #- run:
       #    name: Assemble release build
       #    command: |
-      #      ./gradlew clean testDebugUnitTest    
+      #      ./gradlew clean testDebugUnitTest
+      - codecov/upload    
 
 workflows:
   # Below is the definition of your workflow.
