--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -152,8 +152,9 @@ dependencies {
   }
 
   implementation 'com.google.android.material:material:1.4.0'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
   implementation "com.github.moxy-community:moxy:$moxyVersion"
   implementation "com.github.moxy-community:moxy-app-compat:$moxyVersion"
   implementation "com.github.moxy-community:moxy-ktx:$moxyVersion"
@@ -208,6 +209,7 @@ dependencies {
 
   testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
   testImplementation "org.apache.commons:commons-lang3:$commonsLangVersion"
+  testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
 
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
   testImplementation "commons-io:commons-io:$commonsioVersion"
