--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
     executor:
       name: android/android-machine
 
+    resource_class: medium    
+
     steps:
       # Checkout the code as the first step.
       - checkout
